--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Главная страница</h1>
+    <p>
+      Далеко-далеко за словесными горами в стране гласных и согласных живут,
+      рыбные тексты. Это своих всемогущая но пунктуация, города страну! Ему
+      собрал заманивший то реторический злых! Толку ipsum грустный там рот снова
+      великий!
+    </p>
+  </body>
 </html>
