--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Практикуемся с Git</title>
   </head>
   <body>
-    <h1>Практикуемся с Git</h1>
+    <h1 class="title">Практикуемся с Git</h1>
 
   </body>
 </html>
