--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body class="site-body">
     <h1 class="title">Практикуемся с Git</h1>
-
+    <p class="description">
+      Временное описание данной страницы
+    </p>
   </body>
 </html>
