--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Практикуемся с Git</title>
   </head>
-  <body>
+  <body class="site-body">
     <h1 class="title">Практикуемся с Git</h1>
 
   </body>
