--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body class="site-body">
     <h1 class="title">Практикуемся с Git</h1>
+    <ul>
+      <li>Первый елемент списка</li>
+    </ul>
     <p class="description">
       Временное описание данной страницы
     </p>
